# ai-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  lyrics.csv  pyproject.toml
.github/workflows/: python-ci.yml
ai_service/: __init__.py  ai_service.py  config.py  db.py  index.py  lyrics_reader.py  ml.py  model.py  nn_definition.py  prediction.py  preprocessing_utils.py
ai_service/model/: lyrics.py  prediction.py
ai_service/model_definitions/: dnn.py
ai_service/nn_definition/: dnn.py
models/: sentiment-dnn.pt
notebook/: course_work.ipynb  training.ipynb
tests/: base.py  db_base.py  test_cli.py  test_common.py  test_db.py  test_endpoint.py  test_lyrics_reader.py  test_ml.py  test_model.py
tests/data/: lyrics_test.csv
tests/data/lyrics_test/angry/: 22-20s - Hold On.txt  3 Inches Of Blood - Trial Of Champions.txt  30 Seconds To Mars - Search And Destroy.txt  A Place To Bury Strangers - Dead Beat.txt  ABC - Poison Arrow.txt  Aaron Watson - Whiskey on the Fire.txt  Adelitas Way - Cage The Beast.txt  Aerosmith - Janie's Got A Gun.txt  Against Me! - I Was A Teenage Anarchist.txt  Aiden - Killing Machine.txt  Akon - Don't Matter.txt  Alabama - Old Flame.txt  Alan Jackson - Ring Of Fire.txt  Alanis Morissette - You Oughta Know.txt  Alice Cooper - Poison.txt  Alice Cooper - Welcome To My Nightmare.txt  Alice Cooper - You Drive Me Nervous.txt  Alkaline Trio - Burn.txt  All That Remains - Become The Catalyst.txt  Amorphis - Privilege of Evil (From the Privilege of Evil EP).txt
tests/data/lyrics_test/happy/: .38 Special - Second Chance.txt  (+18 more)
(+46 files in other folders)
