[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "gensim>=4.3.3",
    "numpy==1.26.4",
    "pystemmer>=2.2.0.3",
    "qdrant-client>=1.12.1",
    "spacy>=3.8.4",
    "torch<2.3.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.3.4",
]
