[project]
name = "ai-service"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.6"
dependencies = [
    "flask",
    "gensim",
    "numpy==1.26.4",
    "pystemmer",
    "qdrant-client",
    "spacy",
    "pandas",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "ipdb",
    "ipython",
    "pytest",
    "seaborn",
    "testfixtures",
    "jupyterlab",
    "scikit-learn",
]

